fix warnings about deprecated Class.newInstance() calls